src/main/java/com/example/coachMeUp/exceptions/errors/InvalidCodigoPostalException.java
package com.example.coachMeUp.exceptions.errors;

public class InvalidCodigoPostalException extends RuntimeException{

    public InvalidCodigoPostalException(String message) {
        super(message);
    }

    public InvalidCodigoPostalException(String message, Throwable cause) {
        super(message, cause);
    }
}
